# pajamas

./: .gitignore  pajamas.py  pyproject.toml
pajamas/: __main__.py  pajamas.py
pajamas.egg-info/: PKG-INFO  SOURCES.txt
